--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,3 +14,18 @@ html, body {
   webkit-transition: background-color .3s;
   transition: background-color .3s;
 }
+
+.cp-container .cp-hsvpanel{
+  height: 400px;
+}
+
+.cp-container .cp-hsvpanel .cp-hsvpanel-sv {
+  height: 100%;
+  width: 400px;
+}
+
+.cp-container .cp-hsvpanel .cp-hsvpanel-h,
+.cp-container .cp-hsvpanel .cp-hsvpanel-a {
+  height: 100%;
+  width: 60px;
+}
