--- a/public/views/colors.html
+++ b/public/views/colors.html
@@ -4,20 +4,20 @@
   <title>Colors Editor</title>
   <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="/bootstrap-colorpickersliders/dist/bootstrap.colorpickersliders.css">
+  <link rel="stylesheet" type="text/css" href="../css/main.css">
 </head>
 <body>
 
-  <div class="container">
+  <div class="container text-center">
     <h1 id="js-button-info"></h1>
     <div id="js-colorpicker"></div>
   </div>
 
-  <script src="http://localhost:8080/socket.io/socket.io.js"></script>
+  <script src="http://192.168.1.16:8080/socket.io/socket.io.js"></script>
   <script src="/jquery/dist/jquery.js"></script>
   <script src="/bootstrap-colorpickersliders/dist/bootstrap.colorpickersliders.js"></script>
   <script src="/tinycolor/tinycolor.js"></script>
   <script src="../js/config.js"></script>
-  <script src="../js/colors.js"></script>
   <script src="../js/editor.js"></script>
 
 </body>
