add button to easily change color code + get right index

--- a/public/views/colors.html
+++ b/public/views/colors.html
@@ -9,7 +9,13 @@
 <body>
 
   <div class="container text-center">
-    <h1 id="js-button-info"></h1>
+    <div>
+      <h1 id="js-button-info"></h1>
+      <div>
+        <button class="btn js-prev">&larr;</button>
+        <button class="btn js-next">&rarr;</button>
+      </div>
+    </div>
     <div id="js-colorpicker"></div>
   </div>
 
