--- a/public/views/colors.html
+++ b/public/views/colors.html
@@ -10,8 +10,9 @@
 
   <div class="container text-center">
     <div>
-      <h1 id="js-button-info"></h1>
-      <div>
+      <h2 id="js-button-colornumber"></h2>
+      <h2 id="js-button-colorindex"></h2>
+      <div class="btn-container">
         <button class="btn js-prev">&larr;</button>
         <button class="btn js-next">&rarr;</button>
       </div>
